Renamed executable file

--- a/gamedev/classy-clash/makefile
+++ b/gamedev/classy-clash/makefile
@@ -1,5 +1,5 @@
-classy-clash: libraylib.a main.cpp
-	clang -framework CoreVideo -framework IOKit -framework Cocoa -framework GLUT -framework OpenGL -std=c++11 libraylib.a main.cpp -o classy-clash
+classy_clash: libraylib.a main.cpp
+	clang -framework CoreVideo -framework IOKit -framework Cocoa -framework GLUT -framework OpenGL -std=c++11 libraylib.a main.cpp -o classy_clash
 
 clean:
-	rm *.o classy-clash
+	rm *.o classy_clash
